Add titles to links

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>The best meal ever created</h1>
 
 <p> 
-    <a href="/pages/chicken.html"> </a>
+    <a href="/pages/chicken.html">Chicken</a>
 </p>
 
 <p> 
-    <a href="/pages/rice.html"> </a>
+    <a href="/pages/rice.html">Rice</a>
 </p>
 
 </body>
