Add pictures for chicken and rice

--- a/pages/chicken.html
+++ b/pages/chicken.html
@@ -9,7 +9,9 @@
 
     <h1>How to make baked chicken</h1>
 
-    <ol> </ol>
+    <img src="/img/chicken.jpg"/>
+
+    <!-- <ol> </ol> -->
     
 </body>
 </html>
