Fix links to images

--- a/pages/chicken.html
+++ b/pages/chicken.html
@@ -9,7 +9,7 @@
 
     <h1>How to make baked chicken</h1>
 
-    <img src="/img/chicken.jpg"/>
+    <img src="../img/chicken.jpg"/>
 
     <!-- <ol> </ol> -->
     
