--- a/pages/rice.html
+++ b/pages/rice.html
@@ -8,6 +8,7 @@
 <body>
     <h1>How to make white rice</h1>
 
-    <img src="/img/whrice.jpg"/>
+    <img src="../img/whrice.jpg">
+
 </body>
 </html>
