Add alt, height, and width to pictures

--- a/pages/rice.html
+++ b/pages/rice.html
@@ -8,7 +8,12 @@
 <body>
     <h1>How to make white rice</h1>
 
-    <img src="../img/whrice.jpg">
+    <img 
+        src="../img/whrice.jpg"
+            alt="White rice in a blue bowl"
+                height="310"
+                width="310"
+        />
 
 </body>
 </html>
