--- a/pages/chicken.html
+++ b/pages/chicken.html
@@ -9,7 +9,11 @@
 
     <h1>How to make baked chicken</h1>
 
-    <img src="../img/chicken.jpg"/>
+    <img src="../img/chicken.jpg"
+        alt="Baked chicken breast topped with fresh ground pepper"
+            height="310"
+            width="310"
+    />
 
     <!-- <ol> </ol> -->
     
