Add description to chicken

--- a/pages/chicken.html
+++ b/pages/chicken.html
@@ -15,6 +15,14 @@
             width="310"
     />
 
+    <p>
+        What's better than a quick, easy, nutritious meal after a long day of work? 
+        Sleep, is the only valid answer, but you can't go to bed hungry!
+        With this recipe I'll show you how to make the world's best meal with 
+        little effort and little time. All you need to bring is the ability to set 
+        the oven to 375 degrees fahrenheit. Are you ready?!
+    </p>
+
     <!-- <ol> </ol> -->
     
 </body>
