Add ingredients to chicken

--- a/pages/chicken.html
+++ b/pages/chicken.html
@@ -23,7 +23,16 @@
         <br>the oven to 375 degrees fahrenheit. Are you ready?!<br>
     </p>
 
-    <!-- <ol> </ol> -->
+    <p>
+        <h3>You will need:</h3>
+            <ul>
+                <li>An oven</li>
+                <li>A cooking sheet</li>
+                <li>Tin Foil</li>
+                <li>Chicken breast</li>
+                <li>30 minutes</li>
+            </ul>
+    </p>
     
 </body>
 </html>
