Add directions to chicken

--- a/pages/chicken.html
+++ b/pages/chicken.html
@@ -29,9 +29,27 @@
                 <li>An oven</li>
                 <li>A cooking sheet</li>
                 <li>Tin Foil</li>
+                <li>Non-stick cooking spray</li>
                 <li>Chicken breast</li>
+                <li>A meat thermometer</li>
                 <li>30 minutes</li>
             </ul>
+    </p>
+
+    <p>
+        <h3>Directions:</h3>
+        <ol>
+            <li>Pre-heat oven to 375°F</li>
+            <li>While the oven is pre-heating, set out your baking sheet and cover it with tin foil</li>
+            <li>When the oven beeps, signifying it is at the correct temperature, spray non-stick cooking spray on the tine foil</li>
+            <li>Place chicken breasts on baking sheet and put into oven</li>
+            <li>Set an alarm for 30 minutes and go about your day</li>
+            <li>When you timer goes off, remove chicken from the oven and ensure it has reached 165°F</li>
+            <li>If your chicken is at the correct temperature, you're good to go!</li>
+            <li>If your chicken is below 165°, DO NOT EAT, put back in the oven for five minutes, or until the meat thermometer reads 165°F</li>
+            <li>Bone-apple-tea!</li>
+
+        </ol>
     </p>
     
 </body>
