--- a/pages/rice.html
+++ b/pages/rice.html
@@ -15,5 +15,39 @@
                 width="310"
         />
 
+        <p>
+            <h4>Fluffy, steamy, white rice</h4>
+            <br>Is there anything more complementary to a succulent chicken breast than a warm bed of rice?<br>
+            <br>Yes.. a warm bed of rice drenched in low sodium Kikoman soy sauce<br> 
+            <br>You're here because you're my brother and I sent you the link or you want to learn how to make fantastic rice<br>
+            <br>You've come to the right place, and because I like you, here's a Fall Out Boy Lyric<br>
+            <br>Drink down that gin and kerosine, I cun spen our bridges with me e e e e ee<br>
+            <br>Are you ready?!<br>
+        </p>
+    
+        <p>
+            <h3>You will need:</h3>
+                <ul>
+                    <li>Rice</li>
+                    <li>Water</li>
+                    <li>A rice cooker</li>
+                </ul>
+        </p>
+    
+        <p>
+            <h3>Directions:</h3>
+            <ol>
+                <li>Place one cup of rice in your rice cooker</li>
+                <li>CLEAN YOUR F*CKING RICE -> see steps three through five</li>
+                <li>place enough water in the rice bowl to cover the rice</li>
+                <li>shake or stir with your fingers until the water turns white</li>
+                <li>Drain the water and repeat from step three until the water stays clear after agitation</li>
+                <li>Drain the water one last time</li>
+                <li>Place one and a half cups of water in rice bowl</li>
+                <li>Turn on your rice cooker for 30 minutes</li>
+                <li>after thirty minutes place your rice on a dinner plate</li>
+                <li>Bone-apple-tea!</li>
+            </ol>
+        </p>
 </body>
 </html>
