Add picture of chicken and rice to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     
     <h1>The best meal ever created</h1>
 
+    <img src="./img/chickenrice.jpg"
+        height="250"
+        width="500"
+    >
+
 <p> 
     <a href="./pages/chicken.html">Chicken</a>
 </p>
