Add sandbox and link in index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     
+
     <h1>The best meal ever created</h1>
 
     <img src="./img/chickenrice.jpg"
@@ -20,6 +21,10 @@
 
 <p> 
     <a href="./pages/rice.html">Rice</a>
+</p>
+
+<p>
+    <a href="./sandbox.html">CSS Sandbox</a>
 </p>
 
 </body>
