--- a/index.html
+++ b/index.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 
-    <h1>The best meal ever created</h1>
+    <h1 class="header">The best meal ever created</h1>
 
-    <img src="./img/chickenrice.jpg"
+    <img src="./img/chickenrice.jpg" class="picCentered"
         height="250"
         width="500"
     >
 
-<p> 
-    <a href="./pages/chicken.html">Chicken</a>
-</p>
+    <div class="default">
+        <p> 
+            <a href="./pages/chicken.html">Chicken</a>
+        </p>
 
-<p> 
-    <a href="./pages/rice.html">Rice</a>
-</p>
+        <p> 
+            <a href="./pages/rice.html">Rice</a>
+        </p>
 
-<p>
-    <a href="./sandbox.html">CSS Sandbox</a>
-</p>
+        <p>
+            <a href="./sandbox.html">CSS Sandbox</a>
+        </p>
+    </div>
 
 </body>
 </html>
