--- a/pages/chicken.html
+++ b/pages/chicken.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=3, initial-scale=1.0">
     <title>Baked Chicken</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-    <h1>How to make baked chicken</h1>
+    <h1 class="header">How to make baked chicken</h1>
 
     <img src="../img/chicken.jpg"
         alt="Baked chicken breast topped with fresh ground pepper"
@@ -15,42 +16,46 @@
             width="310"
     />
 
-    <p>
-        <h4>What's better than a quick, easy, nutritious meal after a long day of work?</h4>
-        <br>Sleep, is the only valid answer, but you can't go to bed hungry!<br>
-        <br>With this recipe I'll show you how to make the world's best meal with<br> 
-        <br>little effort and little time. All you need to bring is the ability to set<br>
-        <br>the oven to 375 degrees fahrenheit. Are you ready?!<br>
-    </p>
+    <div class="default">
 
-    <p>
-        <h3>You will need:</h3>
-            <ul>
-                <li>An oven</li>
-                <li>A cooking sheet</li>
-                <li>Tin Foil</li>
-                <li>Non-stick cooking spray</li>
-                <li>Chicken breast</li>
-                <li>A meat thermometer</li>
-                <li>30 minutes</li>
-            </ul>
-    </p>
+        <p>
+            <h4>What's better than a quick, easy, nutritious meal after a long day of work?</h4>
+            <br>Sleep is the only valid answer, <strong><em>but</em></strong> you can't go to bed hungry!<br>
+            <br>With this recipe I'll show you how to make the world's best meal with<br> 
+            <br>little effort and little time. All you need to bring is the ability to set<br>
+            <br>the oven to 375 degrees fahrenheit<br>
+            <br>Are you ready?!<br>
+        </p>
 
-    <p>
-        <h3>Directions:</h3>
-        <ol>
-            <li>Pre-heat oven to 375°F</li>
-            <li>While the oven is pre-heating, set out your baking sheet and cover it with tin foil</li>
-            <li>When the oven beeps, signifying it is at the correct temperature, spray non-stick cooking spray on the tine foil</li>
-            <li>Place chicken breasts on baking sheet and put into oven</li>
-            <li>Set an alarm for 30 minutes and go about your day</li>
-            <li>When you timer goes off, remove chicken from the oven and ensure it has reached 165°F</li>
-            <li>If your chicken is at the correct temperature, you're good to go!</li>
-            <li>If your chicken is below 165°, DO NOT EAT, put back in the oven for five minutes, or until the meat thermometer reads 165°F</li>
-            <li>Bone-apple-tea!</li>
+        <p>
+            <h3>You will need:</h3>
+                <ul>
+                    <li>An oven</li>
+                    <li>A cooking sheet</li>
+                    <li>Tin Foil</li>
+                    <li>Non-stick cooking spray</li>
+                    <li>Chicken breast</li>
+                    <li>A meat thermometer</li>
+                    <li>30 minutes</li>
+                </ul>
+        </p>
 
-        </ol>
-    </p>
+        <p>
+            <h3>Directions:</h3>
+            <ol>
+                <li>Pre-heat oven to 375°F</li>
+                <li>While the oven is pre-heating, set out your baking sheet and cover it with tin foil</li>
+                <li>When the oven beeps, signifying it is at the correct temperature, spray non-stick cooking spray on the tine foil</li>
+                <li>Place chicken breasts on baking sheet and put into oven</li>
+                <li>Set an alarm for 30 minutes and go about your day</li>
+                <li>When you timer goes off, remove chicken from the oven and ensure it has reached 165°F</li>
+                <li>If your chicken is at the correct temperature, you're good to go!</li>
+                <li>If your chicken is below 165°, DO NOT EAT, put back in the oven for five minutes, or until the meat thermometer reads 165°F</li>
+                <li>Bone-apple-tea!</li>
+
+            </ol>
+        </p>
+    </div>
     
 </body>
 </html>
