add margin and padding to homepage

--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
 
     <h1 class="header">The best meal ever created</h1>
 
-    <img src="./img/chickenrice.jpg" class="picCentered"
-        height="250"
-        width="500"
-    >
+    <div class="div">
+        <img src="./img/chickenrice.jpg" class="picCentered"
+            height="250"
+            width="500"
+        >
+    </div>
 
     <div class="default">
         <p> 
             <a href="./pages/chicken.html">Chicken</a>
         </p>
+    </div>
 
+    <div class="default">
         <p> 
             <a href="./pages/rice.html">Rice</a>
         </p>
