Add margin and padding to chicken

--- a/pages/chicken.html
+++ b/pages/chicken.html
@@ -10,14 +10,16 @@
 
     <h1 class="header">How to make baked chicken</h1>
 
-    <img src="../img/chicken.jpg"
-        alt="Baked chicken breast topped with fresh ground pepper"
-            height="310"
-            width="310"
-    />
+    <div class="div">
+        <img src="../img/chicken.jpg"
+            alt="Baked chicken breast topped with fresh ground pepper"
+                height="310"
+                width="310"
+                ali
+        />
+    </div>
 
     <div class="default">
-
         <p>
             <h4>What's better than a quick, easy, nutritious meal after a long day of work?</h4>
             <br>Sleep is the only valid answer, <strong><em>but</em></strong> you can't go to bed hungry!<br>
@@ -26,7 +28,9 @@
             <br>the oven to 375 degrees fahrenheit<br>
             <br>Are you ready?!<br>
         </p>
+    </div>
 
+    <div class="default">
         <p>
             <h3>You will need:</h3>
                 <ul>
@@ -39,7 +43,9 @@
                     <li>30 minutes</li>
                 </ul>
         </p>
+    </div>
 
+    <div class="default">
         <p>
             <h3>Directions:</h3>
             <ol>
