Add margin and padding to rice page

--- a/pages/rice.html
+++ b/pages/rice.html
@@ -9,12 +9,14 @@
 <body>
     <h1 class="header">How to make white rice</h1>
 
-    <img 
-        src="../img/whrice.jpg"
-            alt="White rice in a blue bowl"
-                height="310"
-                width="310"
-        />
+        <div class="div">
+            <img 
+                src="../img/whrice.jpg"
+                    alt="White rice in a blue bowl"
+                        height="310"
+                        width="310"
+                />
+        </div>
 
         <div class="default">
 
@@ -27,7 +29,9 @@
                 <br>Drink down that gin and kerosine, I cun spen our bridges with me e e e e ee<br>
                 <br>Are you ready?!<br>
             </p>
+        </div>
         
+        <div class="default">
             <p>
                 <h3>You will need:</h3>
                     <ul>
@@ -37,21 +41,23 @@
                         <li>Kikoman Low-Sodium Soy Sauce</li>
                     </ul>
             </p>
-        
+        </div>
+
+        <div class="default">
             <p>
                 <h3>Directions:</h3>
-                <ol>
-                    <li>Place one cup of rice in your rice cooker</li>
-                    <li>CLEAN YOUR F*CKING RICE -> see steps three through five</li>
-                    <li>place enough water in the rice bowl to cover the rice</li>
-                    <li>shake or stir with your fingers until the water turns white</li>
-                    <li>Drain the water and repeat from step three until the water stays clear after agitation</li>
-                    <li>Drain the water one last time</li>
-                    <li>Place one and a half cups of water in rice bowl</li>
-                    <li>Turn on your rice cooker for 30 minutes</li>
-                    <li>after thirty minutes place your rice on a dinner plate and drench that bed in soy sauce!</li>
-                    <li>Bone-apple-tea!</li>
-                </ol>
+                    <ol>
+                        <li>Place one cup of rice in your rice cooker</li>
+                        <li>CLEAN YOUR F*CKING RICE -> see steps three through five</li>
+                        <li>place enough water in the rice bowl to cover the rice</li>
+                        <li>shake or stir with your fingers until the water turns white</li>
+                        <li>Drain the water and repeat from step three until the water stays clear after agitation</li>
+                        <li>Drain the water one last time</li>
+                        <li>Place one and a half cups of water in rice bowl</li>
+                        <li>Turn on your rice cooker for 30 minutes</li>
+                        <li>after thirty minutes place your rice on a dinner plate and drench that bed in soy sauce!</li>
+                        <li>Bone-apple-tea!</li>
+                    </ol>
             </p>
         </div>
 </body>
