Trying to prove github works

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <a href="./pages/rice.html">Rice</a>
         </p>
     </div>
+    <div>
+        Make a change
+    </div>
 
 </body>
 </html>
